# learnOpenCV

./: .gitignore
week1_opencvBasics/: CMakeLists.txt  drawOverImage.cpp  readWriteDisplay.cpp
